--- a/index.html
+++ b/index.html
@@ -87,13 +87,7 @@
                                     <a class="nav-link" href="#mh-portfolio">Portfolio</a>
                                 </li>                               
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#mh-pricing">Pricing</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#mh-blog">Blog</a>
-                                </li>
-                                <li class="nav-item">
-                                   <a class="nav-link" href="#mh-contact">Contact</a>
+                                   <a class="nav-link" href="#mh-contact">Contact d</a>
                                 </li>
                             </ul>
                         </div>
@@ -176,7 +170,7 @@
                                     <li><span>Javascript</span></li>
                                 </ul>
                             </div>
-                            <a href="#" class="btn btn-fill wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s">Downlaod CV <i class="fa fa-download"></i></a>
+                            <!-- <a href="#" class="btn btn-fill wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s">Downlaod CV <i class="fa fa-download"></i></a> -->
                         </div>
                     </div>
                 </div>
