--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                                     <a class="nav-link" href="#mh-portfolio">Portfolio</a>
                                 </li>                               
                                 <li class="nav-item">
-                                   <a class="nav-link" href="#mh-contact">Contact d</a>
+                                   <a class="nav-link" href="#mh-contact">Contact</a>
                                 </li>
                             </ul>
                         </div>
