edit footer alamat

--- a/index.html
+++ b/index.html
@@ -801,8 +801,7 @@
                                         <div class="each-info">
                                             <h4>Address</h4>
                                             <address>
-                                                5th Avenue, 34th floor, <br> 
-                                                 New york
+                                               Tangerang
                                             </address>
                                         </div>
                                     </div>
