edit personal information

--- a/index.html
+++ b/index.html
@@ -156,9 +156,10 @@
                     <div class="col-sm-12 col-md-6">
                         <div class="mh-about-inner">
                             <h2 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.1s">About Me</h2>
-                            <p class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s">Hello, I’m a Patrick, web-developer based on Paris. 
-                            I have rich experience in web site design & building 
-                            and customization. Also I am good at</p>
+                            <p class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s">
+                            Saya Sangat termotivasi terus berusaha mengembangkan keterampilan untuk dapat berkontribusi dan mengemukakan ide menarik.
+                            berspesialisasi dalam pengembangan website dengan minat yang besar pada konten digital
+                            </p>  
                             <div class="mh-about-tag wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">
                                 <ul>
                                     <li><span>php</span></li>
