--- a/index.html
+++ b/index.html
@@ -485,12 +485,12 @@
                                 </div>
                                 <div class="grid-item col-md-4 col-sm-6 col-xs-12 branding">
                                     <figure>
-                                        <img src="assets/images/portfolio/g8.png" alt="img04">
+                                        <img src="assets/images/portfolio/storyinstagram.jpg" alt="img04">
                                         <figcaption class="fig-caption">
                                             <i class="fa fa-search"></i>
                                             <h5 class="title">Creative Design</h5>
-                                            <span class="sub-title">Photograpy</span>
-                                            <a href="assets/images/portfolio/g8.png" data-fancybox data-src="#mh"></a>
+                                            <span class="sub-title">Story instagram</span>
+                                            <a href="assets/images/portfolio/storyinstagram.jpg" data-fancybox data-src="#mh"></a>
                                         </figcaption>
                                     </figure>
                                 </div>
