--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
                                         <figcaption class="fig-caption">
                                             <i class="fa fa-search"></i>
                                             <h5 class="title">Creative Design</h5>
-                                            <span class="sub-title">Story instagram</span>
+                                            <span class="sub-title">Social Media Instagram</span>
                                             <a href="assets/images/portfolio/storyinstagram.jpg" data-fancybox data-src="#mh"></a>
                                         </figcaption>
                                     </figure>
@@ -507,12 +507,12 @@
                                 </div>
                                 <div class="grid-item col-md-4 col-sm-6 col-xs-12 branding">
                                     <figure>
-                                        <img src="assets/images/portfolio/g7.jpg" alt="img04">
+                                        <img src="assets/images/portfolio/iklanfacebook.jpg" alt="img04">
                                         <figcaption class="fig-caption">
                                             <i class="fa fa-search"></i>
                                             <h5 class="title">Creative Design</h5>
-                                            <span class="sub-title">Photograpy</span>
-                                            <a href="assets/images/portfolio/g7.jpg" data-fancybox="gallery"></a>
+                                            <span class="sub-title">Social Media Promotion</span>
+                                            <a href="assets/images/portfolio/iklanfacebook.jpg" data-fancybox="gallery"></a>
                                         </figcaption>
                                     </figure>
                                 </div>
