--- a/index.html
+++ b/index.html
@@ -411,8 +411,8 @@
                                 <li data-filter="*" class="current wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.1s"> <span>All Categories</span></li>
                                 <li data-filter=".user-interface" class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s"><span>Web Design</span></li>
                                 <li data-filter=".branding" class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s"><span>Social media Promotion</span></li>
-                                <li data-filter=".mockup" class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s"><span>Mockups</span></li>
-                                <li data-filter=".ui" class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.5s"><span>Photography</span></li>
+                                <li data-filter=".digitalmarketing" class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s"><span>digitalmarketing</span></li>
+                                <!-- <li data-filter=".ui" class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.5s"><span>Photography</span></li> -->
                             </ul>
                         </div>
                         <div class="mh-project-gallery col-sm-12 wow fadeInUp" id="project-gallery" data-wow-duration="0.8s" data-wow-delay="0.5s">
@@ -428,14 +428,36 @@
                                         </figcaption>
                                     </figure>
                                 </div>
-                                <div class="grid-item col-md-4 col-sm-6 col-xs-12 ui mockup">
+                                <div class="grid-item col-md-4 col-sm-6 col-xs-12 ui digitalmarketing">
                                     <figure>
-                                        <img src="assets/images/portfolio/g2.png" alt="img04">
+                                        <img src="assets/images/portfolio/dg1.PNG" alt="img04">
                                         <figcaption class="fig-caption">
                                             <i class="fa fa-search"></i>
                                             <h5 class="title">Creative Design</h5>
-                                            <span class="sub-title">Photograpy</span>
-                                            <a href="assets/images/portfolio/g2.png" data-fancybox data-src="#mh"></a>
+                                            <span class="sub-title">Google trends</span>
+                                            <a href="assets/images/portfolio/dg1.PNG" data-fancybox data-src="#mh"></a>
+                                        </figcaption>
+                                    </figure>
+                                </div>
+                                <div class="grid-item col-md-4 col-sm-6 col-xs-12 ui digitalmarketing">
+                                    <figure>
+                                        <img src="assets/images/portfolio/dg2.PNG" alt="img04">
+                                        <figcaption class="fig-caption">
+                                            <i class="fa fa-search"></i>
+                                            <h5 class="title">Creative Design</h5>
+                                            <span class="sub-title">Google trends</span>
+                                            <a href="assets/images/portfolio/dg2.PNG" data-fancybox data-src="#mh"></a>
+                                        </figcaption>
+                                    </figure>
+                                </div>
+                                <div class="grid-item col-md-4 col-sm-6 col-xs-12 ui digitalmarketing">
+                                    <figure>
+                                        <img src="assets/images/portfolio/dg3.PNG" alt="img04">
+                                        <figcaption class="fig-caption">
+                                            <i class="fa fa-search"></i>
+                                            <h5 class="title">Creative Design</h5>
+                                            <span class="sub-title">Google trends</span>
+                                            <a href="assets/images/portfolio/dg3.PNG" data-fancybox data-src="#mh"></a>
                                         </figcaption>
                                     </figure>
                                 </div>
