--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
                         <div class="portfolio-nav col-sm-12" id="filter-button">
                             <ul>
                                 <li data-filter="*" class="current wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.1s"> <span>All Categories</span></li>
-                                <li data-filter=".user-interface" class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s"><span>Web Design</span></li>
+                                <li data-filter=".web" class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s"><span>Web Design</span></li>
                                 <li data-filter=".branding" class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s"><span>Social media Promotion</span></li>
                                 <li data-filter=".digitalmarketing" class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s"><span>digitalmarketing</span></li>
                                 <!-- <li data-filter=".ui" class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.5s"><span>Photography</span></li> -->
@@ -417,13 +417,13 @@
                         </div>
                         <div class="mh-project-gallery col-sm-12 wow fadeInUp" id="project-gallery" data-wow-duration="0.8s" data-wow-delay="0.5s">
                             <div class="portfolioContainer row">
-                                <div class="grid-item col-md-4 col-sm-6 col-xs-12 user-interface">
+                                <div class="grid-item col-md-4 col-sm-6 col-xs-12 web">
                                     <figure>
-                                        <img src="assets/images/portfolio/g1.jpg" alt="img04">
+                                        <img src="assets/images/portfolio/webdesain.PNG" alt="img04">
                                         <figcaption class="fig-caption">
                                             <i class="fa fa-search"></i>
                                             <h5 class="title">Creative Design</h5>
-                                            <span class="sub-title">Photograpy</span>
+                                            <span class="sub-title">Web Desain</span>
                                             <a data-fancybox data-src="#mh"></a>
                                         </figcaption>
                                     </figure>
@@ -461,7 +461,7 @@
                                         </figcaption>
                                     </figure>
                                 </div>
-                                <div class="grid-item col-md-4 col-sm-6 col-xs-12 user-interface">
+                                <!-- <div class="grid-item col-md-4 col-sm-6 col-xs-12 web">
                                     <figure>
                                         <img src="assets/images/portfolio/g3.png" alt="img04">
                                         <figcaption class="fig-caption">
@@ -471,7 +471,7 @@
                                             <a href="assets/images/portfolio/g3.png" data-fancybox data-src="#mh"></a>
                                         </figcaption>
                                     </figure>
-                                </div>
+                                </div> -->
                                 <div class="grid-item col-md-4 col-sm-6 col-xs-12 branding">
                                     <figure>
                                         <img src="assets/images/portfolio/fbcover.jpg" alt="img04">
@@ -483,7 +483,7 @@
                                         </figcaption>
                                     </figure>
                                 </div>
-                                <div class="grid-item col-md-4 col-sm-6 col-xs-12 user-interface">
+                                <!-- <div class="grid-item col-md-4 col-sm-6 col-xs-12 web">
                                     <figure>
                                         <img src="assets/images/portfolio/g4.png" alt="img04">
                                         <figcaption class="fig-caption">
@@ -493,7 +493,7 @@
                                             <a href="assets/images/portfolio/g4.png" data-fancybox data-src="#mh"></a>
                                         </figcaption>
                                     </figure>
-                                </div>
+                                </div> -->
                                 <div class="grid-item col-md-4 col-sm-6 col-xs-12 branding">
                                     <figure>
                                         <img src="assets/images/portfolio/storynatal.jpg" alt="img04">
