--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
                                 <li data-filter="*" class="current wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.1s"> <span>All Categories</span></li>
                                 <li data-filter=".web" class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s"><span>Web Design</span></li>
                                 <li data-filter=".branding" class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s"><span>Social media Promotion</span></li>
-                                <li data-filter=".digitalmarketing" class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s"><span>digitalmarketing</span></li>
+                                <li data-filter=".digitalmarketing" class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s"><span>DigitalMarketing</span></li>
                                 <!-- <li data-filter=".ui" class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.5s"><span>Photography</span></li> -->
                             </ul>
                         </div>
