--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
                                         </figcaption>
                                     </figure>
                                 </div>
-                                <div class="grid-item col-md-4 col-sm-6 col-xs-12 ui">
+                                <!-- <div class="grid-item col-md-4 col-sm-6 col-xs-12 ui">
                                     <figure>
                                         <img src="assets/images/portfolio/g9.png" alt="img04">
                                         <figcaption class="fig-caption">
@@ -526,7 +526,7 @@
                                             <a href="assets/images/portfolio/g9.png" data-fancybox data-src="#mh"></a>
                                         </figcaption>
                                     </figure>
-                                </div>
+                                </div> -->
                                 <div class="grid-item col-md-4 col-sm-6 col-xs-12 branding">
                                     <figure>
                                         <img src="assets/images/portfolio/iklanfacebook.jpg" alt="img04">
